# cpp2-allocator

./: CMakeLists.txt  README.md
.github/workflows/: hw2_allocator.yml
include/: allocator.h  factorial.h  simple_fwdlist.h
src/: main.cpp
